# imageSharpening

./: CMakeLists.txt  LICENSE  README.md  cpu.cpp  gpu.cu  main.cpp  mainCompare.cpp  test.cpp  test.cu
color/: cpuColor.cpp  gpuColor.cu
